designed by Jennifer Bourn

--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
  * Theme Name:       Mai Inspire
  * Theme URI:        https://bizbudding.com/products/mai-inspire-theme/
  * Description:      Mai Inspire child theme for the Genesis Framework.
- * Author:           BizBudding
+ * Author:           BizBudding Inc.; Design by Jennifer Bourn
  * Author URI:       https://bizbudding.com/
  * Version:          2.0.0
- * Text Domain:      mai-chic
+ * Text Domain:      mai-inspire
  * Template:         genesis
  * Template Version: 3.3.2
  * License:          GPL-2.0-or-later
