--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 /**
  * Theme Name:       Mai Inspire
- * Theme URI:        https://bizbudding.com/products/mai-inspire-theme/
+ * Theme URI:        https://bizbudding.com/mai-theme/
  * Description:      Mai Inspire child theme for the Genesis Framework.
  * Author:           BizBudding Inc.; Design by Jennifer Bourn
  * Author URI:       https://bizbudding.com/
  * Version:          2.0.0
  * Text Domain:      mai-inspire
  * Template:         genesis
- * Template Version: 3.3.2
+ * Template Version: 3.3.5
  * License:          GPL-2.0-or-later
  * License URI:      http://www.gnu.org/licenses/gpl-2.0.html
  */
